Mudando origem dos dados para o banco PostgreSQL e Criando deleção enviando para o MongoDB

--- a/k8s-ocp-quarkus/src/main/resources/application.properties
+++ b/k8s-ocp-quarkus/src/main/resources/application.properties
@@ -14,6 +14,28 @@ quarkus.http.cors.access-control-allow-credentials=true
 quarkus.http.cors.exposed-headers=Content-Disposition,Location,X-Total-Count,X-Page-Count
 
 #-----------------------------------------------------------------DATABASE-----------------------------------------------------------------#
+# PostgreSQL
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=root
+quarkus.datasource.password=1234
 
+quarkus.hibernate-orm.database.generation=update
+
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/postgres
+quarkus.datasource.jdbc.max-size=16
+
+%prod.quarkus.datasource.db-kind=postgresql
+%prod.quarkus.datasource.username=userLRR
+%prod.quarkus.datasource.password=yL1qxAIsQggCPHBp
+
+%prod.quarkus.hibernate-orm.database.generation=update
+
+%prod.quarkus.datasource.jdbc.url=jdbc:postgresql://postgresql:5432/sampledb
+%prod.quarkus.datasource.jdbc.max-size=16
+
+# MongoDB
 quarkus.mongodb.connection-string=mongodb://root:example@localhost:27017
 quarkus.mongodb.database=mongo_db
+
+%prod.quarkus.mongodb.connection-string=mongodb://admin:GhsqcwGyKyTTPPOl@mongodb:27017/
+%prod.quarkus.mongodb.database=sampledb
