--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,35 @@
 version: '3.1'
 services:
-  mongo:
-    image: mongo
-    restart: always
+  k8s-ocp-postgres:
+    container_name: k8s-ocp-postgres
+    image: postgres
     ports:
-      - 27017:27017
+      - "5432:5432"
+    volumes:
+      - "./postgresdbdata:/var/lib/postgresql/data"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      POSTGRES_USER: "root"
+      POSTGRES_PASSWORD: "1234"
 
-  mongo-express:
-    image: mongo-express
-    restart: always
+  k8s-ocp-mongodb:
+    container_name: k8s-ocp-mongodb
+    image: mongo
     ports:
-      - 8081:8081
+      - "27017:27017"
+    volumes:
+      - "./mongodbdata:/data/db"
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
-      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      MONGO_INITDB_ROOT_USERNAME: "root"
+      MONGO_INITDB_ROOT_PASSWORD: "example"
+
+  k8s-ocp-mongo-express:
+    container_name: k8s-ocp-mongo-express
+    image: mongo-express
+    depends_on:
+      - k8s-ocp-mongodb
+    ports:
+      - "8081:8081"
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: "root"
+      ME_CONFIG_MONGODB_ADMINPASSWORD: "example"
+      ME_CONFIG_MONGODB_URL: "mongodb://root:example@k8s-ocp-mongodb:27017/"
