--- a/k8s-ocp-spring/src/main/resources/application-prod.properties
+++ b/k8s-ocp-spring/src/main/resources/application-prod.properties
@@ -1,6 +1,10 @@
-spring.data.mongodb.host=mongodb
-spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=GhsqcwGyKyTTPPOl
-spring.data.mongodb.database=sampledb
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://postgresql:5432/sampledb
+spring.datasource.username=userLRR
+spring.datasource.password=yL1qxAIsQggCPHBp
+
+spring.jpa.hibernate.ddl-auto=update
